@@ -4,6 +4,8 @@
 
   * Builder changes scope based on block arity
   * Nokogiri::XML::Node#<=> compares nodes based on Document position
+  * Nokogiri::XML::Node#matches? returns true if Node can be found with
+    given selector.
 
 === 1.2.3 / 2009-03-22
 
